plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java-library'
}

bootJar.enabled = false
jar.enabled = true

repositories {
    mavenCentral()
    maven { url = 'https://repo.spring.io/milestone' }
    maven { url = 'https://repo.spring.io/snapshot' }
}

allprojects {
    group = 'io.contexa'
    version = '0.1.0-ALPHA'
    description = 'contexa'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    // Maven Central 배포 요구사항: 소스 JAR, Javadoc JAR 생성 (Maven Central requirement: Generate source and Javadoc JARs)
    withSourcesJar()
    withJavadocJar()
}

// Javadoc 생성 설정 (Javadoc generation configuration)
tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    // 한국어 주석 에러 무시 (Ignore Korean comment errors)
    options.addStringOption('Xdoclint:none', '-quiet')
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'maven-publish'

    java {
        withSourcesJar()
        withJavadocJar()
    }

    repositories {
        mavenCentral()
        maven { url = 'https://repo.spring.io/milestone' }
        maven { url = 'https://repo.spring.io/snapshot' }
        maven {
            name = 'Central Portal Snapshots'
            url = 'https://central.sonatype.com/repository/maven-snapshots/'
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    // bootRun 콘솔 한글 인코딩 설정
    tasks.withType(org.springframework.boot.gradle.tasks.run.BootRun).configureEach {
        jvmArgs = ['-Dfile.encoding=UTF-8', '-Dconsole.encoding=UTF-8', '-Dstdout.encoding=UTF-8', '-Dstderr.encoding=UTF-8']
    }

    // Javadoc 오류 무시 설정
    tasks.withType(Javadoc) {
        options.encoding = 'UTF-8'
        options.addStringOption('Xdoclint:none', '-quiet')
        failOnError = false
    }

    // 관리하는 모듈에 공통 dependencies
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation("org.redisson:redisson-spring-boot-starter:3.48.0")
//        implementation 'org.springframework.session:spring-session-data-redis'
        implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
        implementation 'com.querydsl:querydsl-core:5.1.0'
        implementation 'com.google.guava:guava:33.4.8-jre'
        annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"
        implementation 'org.postgresql:postgresql:42.7.6'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
        implementation 'com.fasterxml.jackson.core:jackson-databind'
        implementation("org.springframework.kafka:spring-kafka:3.3.9")

        implementation platform("org.springframework.ai:spring-ai-bom:1.0.0")
        implementation 'org.springframework.ai:spring-ai-starter-model-openai'
        implementation 'org.springframework.ai:spring-ai-advisors-vector-store'
        implementation 'org.springframework.ai:spring-ai-rag'
        implementation 'org.springframework.ai:spring-ai-starter-model-anthropic'
        implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
        implementation 'org.springframework.ai:spring-ai-openai'
        implementation 'org.springframework.ai:spring-ai-anthropic'
        implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
        implementation 'org.springframework.boot:spring-boot-starter-websocket'
//        implementation 'org.springframework.boot:spring-boot-starter-actuator'

        // JWT
        implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

        implementation("com.github.ben-manes.caffeine:caffeine:3.2.2")

        // Observability
        implementation 'io.micrometer:micrometer-tracing-bridge-brave'
        implementation 'io.opentelemetry:opentelemetry-api:1.32.0'

        implementation 'org.springframework.boot:spring-boot-starter-mail'


        implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
        implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.1.0'
        implementation 'io.github.resilience4j:resilience4j-retry:2.1.0'
        implementation 'io.github.resilience4j:resilience4j-bulkhead:2.1.0'
        implementation 'io.github.resilience4j:resilience4j-timelimiter:2.1.0'

        implementation 'org.springframework.boot:spring-boot-starter-cache'
        implementation 'org.apache.commons:commons-pool2:2.12.1'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
        implementation 'org.modelmapper:modelmapper:3.2.3'
        implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
    }

    dependencyManagement {
        dependencyManagement {
            imports {
                mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4"
                mavenBom "io.github.resilience4j:resilience4j-bom:2.1.0"
                mavenBom "org.springframework.statemachine:spring-statemachine-bom:4.0.0"
            }
        }
    }

    // Maven 저장소 배포 설정 (Maven repository publishing configuration)
    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                pom {
                    name = project.name
                    description = 'Contexa - AI-Native IAM & Autonomous Security Platform'
                    url = 'https://github.com/contexa/contexa'

                    licenses {
                        license {
                            name = 'The Apache License, Version 2.0'
                            url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                        }
                    }

                    developers {
                        developer {
                            id = 'contexa'
                            name = 'Contexa Team'
                        }
                    }
                }
            }
        }

        repositories {
            mavenLocal()
        }
    }

}
